[gd_scene load_steps=3 format=2]

[ext_resource path="res://assert/font/pingfangsc.tres" type="DynamicFont" id=1]
[ext_resource path="res://scenes/base_ui/game_setting_window.gd" type="Script" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -150.0
margin_right = 300.0
margin_bottom = 150.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 600.0
margin_bottom = 300.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 600.0
margin_bottom = 77.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 236.0
margin_bottom = 77.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 236.0
margin_bottom = 23.0
size_flags_horizontal = 7
size_flags_vertical = 1
size_flags_stretch_ratio = 4.0
custom_fonts/font = ExtResource( 1 )
text = "游戏主音量"
align = 1
valign = 1

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 27.0
margin_right = 236.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
custom_fonts/font = ExtResource( 1 )
text = "游戏背景音量"
align = 1
valign = 1

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 236.0
margin_bottom = 77.0
size_flags_horizontal = 3
size_flags_vertical = 7
size_flags_stretch_ratio = 4.0
custom_fonts/font = ExtResource( 1 )
text = "游戏音效音量"
align = 1
valign = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 240.0
margin_right = 477.0
margin_bottom = 77.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0

[node name="HSlider" type="HSlider" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_right = 237.0
margin_bottom = 23.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0

[node name="HSlider2" type="HSlider" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 27.0
margin_right = 237.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0

[node name="HSlider3" type="HSlider" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 54.0
margin_right = 237.0
margin_bottom = 77.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 481.0
margin_right = 600.0
margin_bottom = 77.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
margin_right = 119.0
margin_bottom = 23.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "100"
align = 1
valign = 1

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
margin_top = 27.0
margin_right = 119.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "100"
align = 1
valign = 1

[node name="Label4" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
margin_top = 54.0
margin_right = 119.0
margin_bottom = 77.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "100"
align = 1
valign = 1

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 81.0
margin_right = 600.0
margin_bottom = 104.0
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
margin_right = 238.0
margin_bottom = 23.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer4/MarginContainer"]
margin_right = 238.0
margin_bottom = 23.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = ExtResource( 1 )
text = "窗口分辨率"
align = 1
valign = 1

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
margin_left = 242.0
margin_right = 600.0
margin_bottom = 23.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 6.0

[node name="OptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/HBoxContainer4/MarginContainer2"]
margin_right = 101.0
margin_bottom = 23.0
size_flags_horizontal = 0
size_flags_vertical = 7
text = "1024 * 600"
items = [ "1024 * 600", null, false, 0, null, "1080 * 1920", null, false, 1, null ]
selected = 0

[node name="HBoxContainer5" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 108.0
margin_right = 600.0
margin_bottom = 148.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer5"]
margin_right = 229.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer5/MarginContainer"]
margin_right = 229.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = ExtResource( 1 )
text = "是否全屏"
align = 1
valign = 1

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer5"]
margin_left = 233.0
margin_right = 309.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CheckButton" type="CheckButton" parent="MarginContainer/VBoxContainer/HBoxContainer5/MarginContainer2"]
margin_right = 76.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer5"]
margin_left = 313.0
margin_right = 600.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 152.0
margin_right = 600.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_constants/separation = 2

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 270.0
margin_top = 59.0
margin_right = 330.0
margin_bottom = 88.0
rect_min_size = Vector2( 60, 0 )
size_flags_horizontal = 6
size_flags_vertical = 6
custom_fonts/font = ExtResource( 1 )
text = "保存"
[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/HSlider2" to="." method="_on_HSlider2_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/HSlider3" to="." method="_on_HSlider3_value_changed"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/HBoxContainer4/MarginContainer2/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/HBoxContainer5/MarginContainer2/CheckButton" to="." method="_on_CheckButton_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/Button" to="." method="_on_Button_pressed"]
